spacing in focus-area-navbar fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -696,20 +696,12 @@ video {
   margin-top: 3rem;
 }
 
-.mb-3\.5 {
-  margin-bottom: 0.875rem;
-}
-
-.mt-2\.5 {
-  margin-top: 0.625rem;
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
 }
 
 .mt-4 {
@@ -964,6 +956,18 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pt-1\.5 {
+  padding-top: 0.375rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -974,10 +978,6 @@ video {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
 }
 
 .pl-5 {
